# dns-aid-core

./: .bandit  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  MAINTAINERS.md  Makefile  README.md  RELEASE.md  SECURITY.md  SUPPORT.md  cliff.toml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  dco.yml  release.yml  scorecard.yml  security.yml
docs/: api-reference.md  architecture.md  demo-guide.md  getting-started.md  integrations.md
docs/rfc/: iana-considerations.md  wire-format.abnf
examples/: demo_ddns.py  demo_full.py  demo_route53.py  discover_remote_agent.py  integration_autogen.py  integration_google_adk.py  integration_langchain.py  integration_openai_agents.py  integration_python_library.py
src/dns_aid/: __init__.py
src/dns_aid/backends/: __init__.py  base.py  cloudflare.py  ddns.py  mock.py  route53.py
src/dns_aid/backends/infoblox/: __init__.py  bloxone.py  nios.py
src/dns_aid/cli/: __init__.py  main.py
src/dns_aid/core/: __init__.py  a2a_card.py  agent_metadata.py  cap_fetcher.py  capability_model.py  discoverer.py  http_index.py  indexer.py  jwks.py  models.py  publisher.py  validator.py
src/dns_aid/mcp/: __init__.py  server.py
src/dns_aid/sdk/: __init__.py  _config.py  client.py  models.py  repository.py
src/dns_aid/sdk/protocols/: __init__.py  a2a.py  base.py  https.py  mcp.py
src/dns_aid/sdk/ranking/: __init__.py  ranker.py  strategies.py
src/dns_aid/sdk/signals/: __init__.py  collector.py  store.py
src/dns_aid/sdk/telemetry/: __init__.py  otel.py
src/dns_aid/utils/: __init__.py  logging.py  url_safety.py  validation.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  conftest.py  test_ddns.py  test_e2e.py  test_infoblox.py  test_mock_flows.py  test_route53.py
tests/unit/: __init__.py  test_a2a_card.py  test_cap_fetcher.py  test_cli.py  test_cloudflare_backend.py  test_ddns_backend.py  test_discoverer.py  test_http_index.py  test_indexer.py  test_infoblox_backend.py  test_jws.py  test_logging.py  test_mcp_server.py  test_mock_backend.py  test_models.py  test_publisher.py  test_route53_backend.py  test_url_safety.py  test_validation.py  test_validator.py
tests/unit/core/: test_agent_metadata.py  test_capability_model.py
tests/unit/sdk/: __init__.py  conftest.py  test_a2a_handler.py  test_client.py  test_mcp_handler.py  test_models.py  test_otel.py  test_ranking.py  test_sdk_client.py  test_top_level_api.py
tsc/: CHARTER.md
